[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",

    # use oldest-supported-numpy which provides the oldest numpy version with
    # wheels on PyPI (it is a similar operation used in scikit-learn)
    #
    # see: https://github.com/scipy/oldest-supported-numpy/blob/main/setup.cfg
    "oldest-supported-numpy"
]

build-backend = "setuptools.build_meta"

# Configuration for cibuildwheel
[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {package}"
before-test = """\
    pip install lifelines pandas \
    \"scipy<=1.9.1; python_version < '3.8' and sys_platform == 'win32'\" \
    scipy \
    \"scikit-learn<=0.24.2; python_version < '3.8' and sys_platform == 'win32'\" \
    scikit-learn \
    """
