[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0",

    # use oldest-supported-numpy which provides the oldest numpy version with
    # wheels on PyPI (it is a similar operation used in scikit-learn)
    #
    # see: https://github.com/scipy/oldest-supported-numpy/blob/main/setup.cfg
    "oldest-supported-numpy"
]

build-backend = "setuptools.build_meta"

# Configuration for cibuildwheel
[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {package}"
before-test = "pip install lifelines pandas scipy scikit-learn"

[[tool.cibuildwheel.overrides]]
select = "*manylinux*"
test-skip = "*_i686" # some dependencies not provide wheel

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
# before-all = "apk add openblas-dev lapack-dev jpeg-dev"
test-skip = "*" # some dependencies not provide wheel

[[tool.cibuildwheel.overrides]]
select = "*win32"
before-test = "pip install lifelines pandas \"scipy<=1.9.1\" \"scikit-learn<=0.24.2\""
test-skip = "cp310-win32 cp311-win32" # some dependencies not provide wheel

[[tool.cibuildwheel.overrides]]
select = "*macos*"
archs = ["x86_64", "arm64", "universal2"] # the latest MacOS support the Rosetta
before-all = "brew install libomp" # install openmp library
test-skip = "*-macosx_arm64 *-macosx_universal2:arm64"
